# PIAIC

./: .gitignore
.github/workflows/: main_testk213309.yml
Quarter#1/Assignment/Q#01-02/: main.js
Quarter#1/Assignment/Q#05/: main.js  main.ts
Quarter#1/Assignment/Q#07-08/: main.js  main.ts
Quarter#1/Assignment/Q#09/: main.ts
Quarter#1/Assignment/Q#10-12/: main.js  main.ts
Quarter#1/Assignment/Q#13/: main.js
Quarter#1/Assignment/Q#14-17/: main.ts
Quarter#1/Assignment/Q#19/: main.ts
Quarter#1/Assignment/Q#22/: main.ts
Quarter#1/Assignment/Q#23/: main.ts
Quarter#1/Assignment/Q#24/: main.js  main.ts
Quarter#1/Assignment/Q#25-27/: main.js  main.ts
Quarter#1/Assignment/Q#28/: main.js
Quarter#1/Assignment/Q#30-31/: main.js
Quarter#1/Assignment/Q#32/: main.ts
Quarter#1/Assignment/Q#34/: main.js  main.ts
Quarter#1/Assignment/Q#35/: main.js
Quarter#1/Assignment/Q#36-37/: main.js
Quarter#1/Assignment/Q#39/: main.js
Quarter#1/Assignment/Q#40/: main.ts
Quarter#1/Assignment/Q#41-43/: main.js
Quarter#1/Assignment/Q#44/: main.js
Quarter#1/Lectures/Lecture#02/: main.js
Quarter#1/Lectures/Lecture#05/: main.ts
Quarter#1/Lectures/Lecture#06/: calc.js  calc.ts  package-lock.json  package.json  users.json
Quarter#1/Lectures/Lecture#07/: main.js
Quarter#1/Lectures/Lecture#08/: steps.txt
Quarter2/Assignments/: package-lock.json  package.json
Quarter2/Lectures/: LectureGuide.txt  package-lock.json  package.json
Quarter3/Lectures/Lecture03/: pyproject.toml
Quarter3/Lectures/Lecture03/lecture03/: main.py
(+162 files in other folders)
