[tool.poetry]
name = "lecture03"
version = "0.1.0"
description = ""
authors = ["MohammadYehya <mohammad7446@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
